<resources>
    <string name="app_name">Community</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_near_people">NearPeopleActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_settings">Settings</string>
    <string name="top">头条</string>
    <string name="shehui">社会</string>
    <string name="guonei">国内</string>
    <string name="guoji">国际</string>
    <string name="yule">娱乐</string>
    <string name="junshi">军事</string>
    <string name="keji">科技</string>
    <string name="tiyu">体育</string>
    <string name="caijing">财经</string>
    <string name="shishang">时尚</string>
</resources>
